src/boardfile/BoardParser.java
// Generated from Board.g4 by ANTLR 4.0

package boardfile;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BoardParser extends Parser {
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
        new PredictionContextCache();
    public static final int
        BOARDW=1, EQ=2, NAMEL=3, GRAVITY=4, FRICTION1=5, FRICTION2=6, XV=7, YV=8, 
        X=9, Y=10, ORT=11, WIDTH=12, HEIGHT=13, TRIGGER=14, ACTION=15, BALL=16, 
        SQB=17, CCB=18, TRIB=19, LEFTF=20, RIGHTF=21, ABS=22, FIRE=23, INT=24, 
        FLOAT=25, NAME=26, WHITESPACE=27, COMMENT=28;
    public static final String[] tokenNames = {
        "<INVALID>", "'board'", "'='", "'name'", "'gravity'", "'friction1'", "'friction2'", 
        "'xVelocity'", "'yVelocity'", "'x'", "'y'", "'orientation'", "'width'", 
        "'height'", "'trigger'", "'action'", "'ball'", "'squareBumper'", "'circleBumper'", 
        "'triangleBumper'", "'leftFlipper'", "'rightFlipper'", "'absorber'", "'fire'", 
        "INT", "FLOAT", "NAME", "WHITESPACE", "COMMENT"
    };
    public static final int
        RULE_board = 0, RULE_topline = 1, RULE_lines = 2, RULE_line = 3, RULE_ballline = 4, 
                   RULE_sqbline = 5, RULE_ccbline = 6, RULE_tribline = 7, RULE_leftfline = 8, 
                   RULE_rightfline = 9, RULE_absline = 10, RULE_fireline = 11, RULE_namefield = 12, 
                   RULE_gravityfield = 13, RULE_friction1field = 14, RULE_friction2field = 15, 
                   RULE_xffield = 16, RULE_yffield = 17, RULE_xvfield = 18, RULE_yvfield = 19, 
                   RULE_xfield = 20, RULE_yfield = 21, RULE_ortfield = 22, RULE_widthfield = 23, 
                   RULE_heightfield = 24, RULE_triggerfield = 25, RULE_actionfield = 26;
    public static final String[] ruleNames = {
        "board", "topline", "lines", "line", "ballline", "sqbline", "ccbline", 
        "tribline", "leftfline", "rightfline", "absline", "fireline", "namefield", 
        "gravityfield", "friction1field", "friction2field", "xffield", "yffield", 
        "xvfield", "yvfield", "xfield", "yfield", "ortfield", "widthfield", "heightfield", 
        "triggerfield", "actionfield"
    };

    @Override
    public String getGrammarFileName() { return "Board.g4"; }

    @Override
    public String[] getTokenNames() { return tokenNames; }

    @Override
    public String[] getRuleNames() { return ruleNames; }

    @Override
    public ATN getATN() { return _ATN; }


    /**
     * Call this method to have the lexer or parser throw a RuntimeException if
     * it encounters an error.
     */
    public void reportErrorsAsExceptions() {
        addErrorListener(new ExceptionThrowingErrorListener());
    }

    private static class ExceptionThrowingErrorListener extends BaseErrorListener {
        @Override
        public void syntaxError(Recognizer<?, ?> recognizer,
                Object offendingSymbol, int line, int charPositionInLine,
                String msg, RecognitionException e) {
            throw new RuntimeException(msg);
        }
    }

    public BoardParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
    }
    public static class BoardContext extends ParserRuleContext {
        public ToplineContext topline() {
            return getRuleContext(ToplineContext.class,0);
        }
        public TerminalNode EOF() { return getToken(BoardParser.EOF, 0); }
        public LinesContext lines() {
            return getRuleContext(LinesContext.class,0);
        }
        public BoardContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_board; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterBoard(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitBoard(this);
        }
    }

    public final BoardContext board() throws RecognitionException {
        BoardContext _localctx = new BoardContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_board);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(54); topline();
                setState(55); lines(0);
                setState(56); match(EOF);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ToplineContext extends ParserRuleContext {
        public TerminalNode BOARDW() { return getToken(BoardParser.BOARDW, 0); }
        public Friction1fieldContext friction1field() {
            return getRuleContext(Friction1fieldContext.class,0);
        }
        public GravityfieldContext gravityfield() {
            return getRuleContext(GravityfieldContext.class,0);
        }
        public NamefieldContext namefield() {
            return getRuleContext(NamefieldContext.class,0);
        }
        public Friction2fieldContext friction2field() {
            return getRuleContext(Friction2fieldContext.class,0);
        }
        public ToplineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_topline; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterTopline(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitTopline(this);
        }
    }

    public final ToplineContext topline() throws RecognitionException {
        ToplineContext _localctx = new ToplineContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_topline);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(58); match(BOARDW);
                setState(59); namefield();
                setState(61);
                _la = _input.LA(1);
                if (_la==GRAVITY) {
                    {
                        setState(60); gravityfield();
                    }
                }

                setState(64);
                _la = _input.LA(1);
                if (_la==FRICTION1) {
                    {
                        setState(63); friction1field();
                    }
                }

                setState(67);
                _la = _input.LA(1);
                if (_la==FRICTION2) {
                    {
                        setState(66); friction2field();
                    }
                }

            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LinesContext extends ParserRuleContext {
        public int _p;
        public LineContext line() {
            return getRuleContext(LineContext.class,0);
        }
        public LinesContext lines() {
            return getRuleContext(LinesContext.class,0);
        }
        public LinesContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
        public LinesContext(ParserRuleContext parent, int invokingState, int _p) {
            super(parent, invokingState);
            this._p = _p;
        }
        @Override public int getRuleIndex() { return RULE_lines; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterLines(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitLines(this);
        }
    }

    public final LinesContext lines(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        LinesContext _localctx = new LinesContext(_ctx, _parentState, _p);
        LinesContext _prevctx = _localctx;
        int _startState = 4;
        enterRecursionRule(_localctx, RULE_lines);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(70); line();
                }
                _ctx.stop = _input.LT(-1);
                setState(76);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input,3,_ctx);
                while ( _alt!=2 && _alt!=-1 ) {
                    if ( _alt==1 ) {
                        if ( _parseListeners!=null ) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new LinesContext(_parentctx, _parentState, _p);
                                pushNewRecursionContext(_localctx, _startState, RULE_lines);
                                setState(72);
                                if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
                                setState(73); line();
                            }
                        } 
                    }
                    setState(78);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input,3,_ctx);
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class LineContext extends ParserRuleContext {
        public RightflineContext rightfline() {
            return getRuleContext(RightflineContext.class,0);
        }
        public SqblineContext sqbline() {
            return getRuleContext(SqblineContext.class,0);
        }
        public BalllineContext ballline() {
            return getRuleContext(BalllineContext.class,0);
        }
        public AbslineContext absline() {
            return getRuleContext(AbslineContext.class,0);
        }
        public TriblineContext tribline() {
            return getRuleContext(TriblineContext.class,0);
        }
        public FirelineContext fireline() {
            return getRuleContext(FirelineContext.class,0);
        }
        public LeftflineContext leftfline() {
            return getRuleContext(LeftflineContext.class,0);
        }
        public CcblineContext ccbline() {
            return getRuleContext(CcblineContext.class,0);
        }
        public LineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_line; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterLine(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitLine(this);
        }
    }

    public final LineContext line() throws RecognitionException {
        LineContext _localctx = new LineContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_line);
        try {
            setState(87);
            switch (_input.LA(1)) {
                case BALL:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(79); ballline();
                    }
                    break;
                case SQB:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(80); sqbline();
                    }
                    break;
                case CCB:
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(81); ccbline();
                    }
                    break;
                case TRIB:
                    enterOuterAlt(_localctx, 4);
                    {
                        setState(82); tribline();
                    }
                    break;
                case LEFTF:
                    enterOuterAlt(_localctx, 5);
                    {
                        setState(83); leftfline();
                    }
                    break;
                case RIGHTF:
                    enterOuterAlt(_localctx, 6);
                    {
                        setState(84); rightfline();
                    }
                    break;
                case ABS:
                    enterOuterAlt(_localctx, 7);
                    {
                        setState(85); absline();
                    }
                    break;
                case FIRE:
                    enterOuterAlt(_localctx, 8);
                    {
                        setState(86); fireline();
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class BalllineContext extends ParserRuleContext {
        public YffieldContext yffield() {
            return getRuleContext(YffieldContext.class,0);
        }
        public YvfieldContext yvfield() {
            return getRuleContext(YvfieldContext.class,0);
        }
        public TerminalNode BALL() { return getToken(BoardParser.BALL, 0); }
        public XffieldContext xffield() {
            return getRuleContext(XffieldContext.class,0);
        }
        public NamefieldContext namefield() {
            return getRuleContext(NamefieldContext.class,0);
        }
        public XvfieldContext xvfield() {
            return getRuleContext(XvfieldContext.class,0);
        }
        public BalllineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_ballline; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterBallline(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitBallline(this);
        }
    }

    public final BalllineContext ballline() throws RecognitionException {
        BalllineContext _localctx = new BalllineContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_ballline);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(89); match(BALL);
                setState(90); namefield();
                setState(91); xffield();
                setState(92); yffield();
                setState(93); xvfield();
                setState(94); yvfield();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SqblineContext extends ParserRuleContext {
        public YfieldContext yfield() {
            return getRuleContext(YfieldContext.class,0);
        }
        public XfieldContext xfield() {
            return getRuleContext(XfieldContext.class,0);
        }
        public TerminalNode SQB() { return getToken(BoardParser.SQB, 0); }
        public NamefieldContext namefield() {
            return getRuleContext(NamefieldContext.class,0);
        }
        public SqblineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_sqbline; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterSqbline(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitSqbline(this);
        }
    }

    public final SqblineContext sqbline() throws RecognitionException {
        SqblineContext _localctx = new SqblineContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_sqbline);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(96); match(SQB);
                setState(97); namefield();
                setState(98); xfield();
                setState(99); yfield();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CcblineContext extends ParserRuleContext {
        public YfieldContext yfield() {
            return getRuleContext(YfieldContext.class,0);
        }
        public XfieldContext xfield() {
            return getRuleContext(XfieldContext.class,0);
        }
        public TerminalNode CCB() { return getToken(BoardParser.CCB, 0); }
        public NamefieldContext namefield() {
            return getRuleContext(NamefieldContext.class,0);
        }
        public CcblineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_ccbline; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterCcbline(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitCcbline(this);
        }
    }

    public final CcblineContext ccbline() throws RecognitionException {
        CcblineContext _localctx = new CcblineContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_ccbline);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(101); match(CCB);
                setState(102); namefield();
                setState(103); xfield();
                setState(104); yfield();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TriblineContext extends ParserRuleContext {
        public YfieldContext yfield() {
            return getRuleContext(YfieldContext.class,0);
        }
        public XfieldContext xfield() {
            return getRuleContext(XfieldContext.class,0);
        }
        public TerminalNode TRIB() { return getToken(BoardParser.TRIB, 0); }
        public OrtfieldContext ortfield() {
            return getRuleContext(OrtfieldContext.class,0);
        }
        public NamefieldContext namefield() {
            return getRuleContext(NamefieldContext.class,0);
        }
        public TriblineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_tribline; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterTribline(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitTribline(this);
        }
    }

    public final TriblineContext tribline() throws RecognitionException {
        TriblineContext _localctx = new TriblineContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_tribline);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(106); match(TRIB);
                setState(107); namefield();
                setState(108); xfield();
                setState(109); yfield();
                setState(110); ortfield();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LeftflineContext extends ParserRuleContext {
        public YfieldContext yfield() {
            return getRuleContext(YfieldContext.class,0);
        }
        public XfieldContext xfield() {
            return getRuleContext(XfieldContext.class,0);
        }
        public OrtfieldContext ortfield() {
            return getRuleContext(OrtfieldContext.class,0);
        }
        public NamefieldContext namefield() {
            return getRuleContext(NamefieldContext.class,0);
        }
        public TerminalNode LEFTF() { return getToken(BoardParser.LEFTF, 0); }
        public LeftflineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_leftfline; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterLeftfline(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitLeftfline(this);
        }
    }

    public final LeftflineContext leftfline() throws RecognitionException {
        LeftflineContext _localctx = new LeftflineContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_leftfline);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(112); match(LEFTF);
                setState(113); namefield();
                setState(114); xfield();
                setState(115); yfield();
                setState(116); ortfield();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RightflineContext extends ParserRuleContext {
        public YfieldContext yfield() {
            return getRuleContext(YfieldContext.class,0);
        }
        public XfieldContext xfield() {
            return getRuleContext(XfieldContext.class,0);
        }
        public TerminalNode RIGHTF() { return getToken(BoardParser.RIGHTF, 0); }
        public OrtfieldContext ortfield() {
            return getRuleContext(OrtfieldContext.class,0);
        }
        public NamefieldContext namefield() {
            return getRuleContext(NamefieldContext.class,0);
        }
        public RightflineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_rightfline; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterRightfline(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitRightfline(this);
        }
    }

    public final RightflineContext rightfline() throws RecognitionException {
        RightflineContext _localctx = new RightflineContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_rightfline);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(118); match(RIGHTF);
                setState(119); namefield();
                setState(120); xfield();
                setState(121); yfield();
                setState(122); ortfield();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AbslineContext extends ParserRuleContext {
        public TerminalNode ABS() { return getToken(BoardParser.ABS, 0); }
        public YfieldContext yfield() {
            return getRuleContext(YfieldContext.class,0);
        }
        public WidthfieldContext widthfield() {
            return getRuleContext(WidthfieldContext.class,0);
        }
        public HeightfieldContext heightfield() {
            return getRuleContext(HeightfieldContext.class,0);
        }
        public XfieldContext xfield() {
            return getRuleContext(XfieldContext.class,0);
        }
        public NamefieldContext namefield() {
            return getRuleContext(NamefieldContext.class,0);
        }
        public AbslineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_absline; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterAbsline(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitAbsline(this);
        }
    }

    public final AbslineContext absline() throws RecognitionException {
        AbslineContext _localctx = new AbslineContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_absline);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(124); match(ABS);
                setState(125); namefield();
                setState(126); xfield();
                setState(127); yfield();
                setState(128); widthfield();
                setState(129); heightfield();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FirelineContext extends ParserRuleContext {
        public TerminalNode FIRE() { return getToken(BoardParser.FIRE, 0); }
        public ActionfieldContext actionfield() {
            return getRuleContext(ActionfieldContext.class,0);
        }
        public TriggerfieldContext triggerfield() {
            return getRuleContext(TriggerfieldContext.class,0);
        }
        public FirelineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_fireline; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterFireline(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitFireline(this);
        }
    }

    public final FirelineContext fireline() throws RecognitionException {
        FirelineContext _localctx = new FirelineContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_fireline);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(131); match(FIRE);
                setState(132); triggerfield();
                setState(133); actionfield();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class NamefieldContext extends ParserRuleContext {
        public TerminalNode NAME() { return getToken(BoardParser.NAME, 0); }
        public TerminalNode NAMEL() { return getToken(BoardParser.NAMEL, 0); }
        public TerminalNode EQ() { return getToken(BoardParser.EQ, 0); }
        public NamefieldContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_namefield; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterNamefield(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitNamefield(this);
        }
    }

    public final NamefieldContext namefield() throws RecognitionException {
        NamefieldContext _localctx = new NamefieldContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_namefield);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(135); match(NAMEL);
                setState(136); match(EQ);
                setState(137); match(NAME);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class GravityfieldContext extends ParserRuleContext {
        public TerminalNode FLOAT() { return getToken(BoardParser.FLOAT, 0); }
        public TerminalNode EQ() { return getToken(BoardParser.EQ, 0); }
        public TerminalNode GRAVITY() { return getToken(BoardParser.GRAVITY, 0); }
        public GravityfieldContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_gravityfield; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterGravityfield(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitGravityfield(this);
        }
    }

    public final GravityfieldContext gravityfield() throws RecognitionException {
        GravityfieldContext _localctx = new GravityfieldContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_gravityfield);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(139); match(GRAVITY);
                setState(140); match(EQ);
                setState(141); match(FLOAT);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Friction1fieldContext extends ParserRuleContext {
        public TerminalNode FLOAT() { return getToken(BoardParser.FLOAT, 0); }
        public TerminalNode EQ() { return getToken(BoardParser.EQ, 0); }
        public TerminalNode FRICTION1() { return getToken(BoardParser.FRICTION1, 0); }
        public Friction1fieldContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_friction1field; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterFriction1field(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitFriction1field(this);
        }
    }

    public final Friction1fieldContext friction1field() throws RecognitionException {
        Friction1fieldContext _localctx = new Friction1fieldContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_friction1field);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(143); match(FRICTION1);
                setState(144); match(EQ);
                setState(145); match(FLOAT);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Friction2fieldContext extends ParserRuleContext {
        public TerminalNode FRICTION2() { return getToken(BoardParser.FRICTION2, 0); }
        public TerminalNode FLOAT() { return getToken(BoardParser.FLOAT, 0); }
        public TerminalNode EQ() { return getToken(BoardParser.EQ, 0); }
        public Friction2fieldContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_friction2field; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).enterFriction2field(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof BoardListener ) ((BoardListener)listener).exitFriction2field(this);
        }
    }

    public final Friction2fieldContext friction2field() throws RecognitionException {
        Friction2fieldContext _localctx = new Friction2fieldContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_friction2field);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(147); match(FRICTION2);
                setState(148); match(EQ);
                setState(149); match(FLOAT);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }
